# cpprest

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
app/: main.cpp
app/include/: handler.h  stdafx.h
app/src/: handler.cpp
libs/: build_dependencies.sh
